section and section intro spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,11 @@ h2 {
 }
 
 /*Main*/
-#activity, #say, #blog {padding-bottom: 40px;}
+.section {padding-top: 50px;}
 
 .section-intro {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 .carousel {
@@ -94,6 +94,13 @@ h2 {
     left: 45%;
     padding-top: 10%;
     padding-bottom: 15%;
+}
+
+/*Images*/
+.img-circle {
+    position: relative;
+    right: 20%;
+    left: 20%;
 }
 /*footer*/
 footer {
